# Fcasher-deleter

./: .gitignore  CMakeLists.txt  README.md  run_fcasher.bat
.github/workflows/: ci.yml
build-ci/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  fcasher_app.lib  fcasher_core.lib
docs/: architecture.md  usage.md
include/app/: category_registry.hpp  cli.hpp  command_dispatcher.hpp  report_formatter.hpp  safety_policy.hpp
include/core/: cleanup_engine.h  file_record.h  path_filters.h  scan_engine.h  scan_result.h
include/gui/: main_window.hpp  session_controller.hpp
include/platform/: windows_paths.hpp
include/services/: export_service.hpp  report_service.hpp
sample_output/: cleanup_report.txt  preview.txt  scan_result.json
src/: main.cpp
src/app/: category_registry.cpp  cli.cpp  command_dispatcher.cpp  report_formatter.cpp  safety_policy.cpp
src/core/: cleanup_engine.c  file_record.c  path_filters.c  scan_engine.c  scan_result.c
src/gui/: main_window.cpp  session_controller.cpp  winmain.cpp
src/platform/: windows_paths.cpp
src/services/: export_service.cpp  report_service.cpp
tests/: test_cli.cpp  test_common.hpp  test_filters.cpp  test_main.cpp  test_registry.cpp  test_safety.cpp  test_scan.cpp
